--- a/index.html
+++ b/index.html
@@ -1,47 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="css/main.css">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TOURISMUS</title>
+	<meta charset="UTF-8">
+	<title>Gallery</title>
+	<link rel="stylesheet" href="css\main.css">
 </head>
 <body>
-    <main>
-      <div class="container first">
-        <p class="tourismus">TOURISMUS</p>
-        <div class="text-container">
-          <p class="first-line">explore the</p>
-          <p class="second-line">deep forest</p>
-          <P class="third-line">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem ratione dolor tempore, dolorem mollitia explicabo officiis facere. Corporis, deserunt harum.  </P>
-        </div>
-      </div>
-      <div class="container second">
-      <div class="gallery-container">
-        <div class="gallery-text">
-          <p class="gallery-header">Gallery</p>
-          <p class="gallery-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, eveniet.</p>
-        </div>
-        
-        <div class="img-container">
-          <img src="img/img21.jpg" class="img1" alt="Tourism gallery">
-          <div class="wrapper">
-            <img src="img/img22.jpg" class="img2" alt="Tourism gallery">
-            <img src="img/img23.jpg" class="img3" alt="Tourism gallery">  
-          </div>
-        </div>
-      </div>
-    </div>
-      <div class="container third"></div>
-        <div class="last-container">
-          <p class="last-headed">Lorem ipsum.</p>
-          <p class="last-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam suscipit corporis fugiat, saepe quibusdam, numquam odio explicabo facilis ullam iusto, unde nulla sequi aut laboriosam, dicta eos atque! Vitae, debitis!</p>
-          <p>djssdjsdfisdfosdsdhfshfduhfhdfhsfd</p>
-        </div>
-    </main>
+	<main>
+		<h1>Gallery</h1>
+
+		<div class="photo photo1"></div>
+		<div class="photo photo2"></div>
+		<div class="photo photo3"></div>
+		<div class="photo photo4"></div>
+		<div class="photo photo5"></div>
+		<div class="photo photo6"></div>
+		<div class="photo photo7"></div>
+		<div class="photo photo8"></div>
+		<div class="photo photo9"></div>
+		<div class="photo photo10"></div>
+		<div class="photo photo11"></div>
+		<div class="photo photo12"></div>
+	</main>
 </body>
 </html>
-
-
-
